[gd_scene load_steps=7 format=3 uid="uid://crm0y5ev3lovg"]

[ext_resource type="Script" uid="uid://bwjlorgdgur3x" path="res://src/gameplay/main_game.gd" id="1_sq1eg"]
[ext_resource type="Resource" uid="uid://luybrgcgac4r" path="res://src/gameplay/Level1.tres" id="2_m70f8"]
[ext_resource type="PackedScene" uid="uid://dry8n3hcd7hi7" path="res://src/characters/player/player.tscn" id="3_44uhg"]
[ext_resource type="PackedScene" uid="uid://ejcvrsf4dhhh" path="res://src/core/spawners/coin/coin_spawner.tscn" id="3_gt3fb"]
[ext_resource type="PackedScene" uid="uid://ct0erhcdhouh0" path="res://src/core/spawners/girl/girl_spawner.tscn" id="4_0dvni"]
[ext_resource type="PackedScene" uid="uid://cwnyp4topu4nb" path="res://src/environment/road/road_test_tile_map.tscn" id="5_glor6"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_sq1eg")
level1 = ExtResource("2_m70f8")

[node name="Node2D" parent="." instance=ExtResource("5_glor6")]

[node name="CoinSpawner" parent="." instance=ExtResource("3_gt3fb")]
spawn_interval = 0.2
projectile_speed = 1000.0

[node name="GirlSpawner" parent="." instance=ExtResource("4_0dvni")]
spawn_interval = 1.0

[node name="Player" parent="." instance=ExtResource("3_44uhg")]
position = Vector2(543, 1717)

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="TopBar" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="FuelBar" type="ProgressBar" parent="UI/TopBar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 2
value = 100.0

[node name="TimeLabel" type="Label" parent="UI/TopBar"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 65.0
offset_right = 200.0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Time: 0.0"

[node name="CoinLabel" type="Label" parent="UI/TopBar"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = 65.0
offset_right = -20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Coins: 0"
horizontal_alignment = 2
